--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "@tauri-apps/api": "^1.5.1",
     "pspdfkit": "^2023.5.1",
     "react": "^18.2.0",
